--- a/assignment1.css
+++ b/assignment1.css
@@ -22,7 +22,7 @@ div{
     display : flex;
     flex-direction : column;
 }
-.left div:nth-child(1){
+.left>div:nth-child(1){
   flex : 3 1 auto;
   background-color: aqua;
 }
