--- a/assignment1.css
+++ b/assignment1.css
@@ -4,36 +4,39 @@ div{
 }
 .wrap{
   width: 500px;
-    height: 500px;
-    display : flex;
-    flex-direction : column;
+  height: 500px;
 }
-
+.wrap div{
+  display: inline-block;
+  vertical-align:top;
+}
 .top{
-  flex : 2 1 auto;
+  width: 100%;
+  height: 20%;
   background-color: blueviolet;
 }
 .bottom{
-  flex : 8 1 auto;
-  display:flex;
+  width: 100%;
+  height: 80%;
 }
 .left{
-    flex: 7 1 auto;
-    display : flex;
-    flex-direction : column;
+  width: 70%;
+  height: 100%;
 }
 .left>div:nth-child(1){
-  flex : 3 1 auto;
+  width: 100%;
+  height: 75%;
   background-color: aqua;
 }
 
 .lbot{
-  flex : 1 1 auto;
-  display:flex;
+  width: 100%;
+  height: 25%;
 }
 
 .lbot > div{
-  flex : 1 1 auto;
+  width: 33%;
+  height: 100%;
 }
 .lbot > div:nth-child(1){
   background-color: aquamarine;
@@ -45,12 +48,12 @@ div{
   background-color: Azure;
 }
 .right{
-  flex : 3 1 auto;
-    display : flex;
-    flex-direction : column;
+  width: 30%;
+  height: 100%;
 }
 .right > div{
-  flex : 1 1 auto;
+  width: 100%;
+  height: 50%;
 }
 .right>div:nth-child(1){
   background-color:Beige
